--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "discord.js": "^14.16.3",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
