--- a/api/render.yaml
+++ b/api/render.yaml
@@ -10,6 +10,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3000
       - key: MONGODB_URI
         sync: false # This will be set manually in Render dashboard
       - key: JWT_SECRET
