--- a/api/render.yaml
+++ b/api/render.yaml
@@ -2,20 +2,21 @@ services:
   - type: web
     name: bloxyspin-api
     env: node
-    plan: starter # You can change this to a different plan if needed
+    plan: starter
+    rootDir: api
     buildCommand: npm install
-    startCommand: node server.js
+    startCommand: npm start
     autoDeploy: true
-    healthCheckPath: /health # Make sure to add a health check endpoint in your API
+    healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 10000
       - key: MONGODB_URI
-        sync: false # This will be set manually in Render dashboard
+        sync: false
       - key: JWT_SECRET
-        sync: false # This will be set manually in Render dashboard
+        sync: false
       - key: DISCORD_CLIENT_ID
         sync: false
       - key: DISCORD_CLIENT_SECRET
